deployments/pathweb/plex/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: media-services
spec:
  serviceName: plex-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: pathweb-worker-baldric
      priorityClassName: rfhome-high-priority
      containers:
      - name: server
        image: plexinc/pms-docker:latest
        ports:
        - containerPort: 32400
          name: plex
        - containerPort: 8324
          name: plex-roku
        - containerPort: 32469
          name: plex-dlna
        - containerPort: 1900
          name: plex-upnp
          protocol: UDP
        - containerPort: 32410
          name: plex-gdm-1
          protocol: UDP
        - containerPort: 32412
          name: plex-gdm-2
          protocol: UDP
        - containerPort: 32413
          name: plex-gdm-3
          protocol: UDP
        - containerPort: 32414
          name: plex-gdm-4
          protocol: UDP
        volumeMounts:
        - name: media
          mountPath: /data
          readOnly: false
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: tls-cert
          mountPath: /certs
          readOnly: true
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media
      - name: config
        persistentVolumeClaim:
          claimName: plex-data
      - name: transcode
        persistentVolumeClaim:
          claimName: plex-transcode
      - name: tls-cert
        secret:
          secretName: services-wildcard-cert
