deployments/pathweb/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-headless
  labels:
    app.kubernetes.io/name: plex
  annotations:
    traefik.ingress.kubernetes.io/service.serversTransport: media-services-plex-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  selector:
    app.kubernetes.io/name: plex
  clusterIP: None
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  ports:
  - port: 32400
    targetPort: plex
    name: plex
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
    lb-location: rfhome
    external-dns: local-pdns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plexdirect.services.home.yrf.me
    # Pin the IPs so that they don't change
    io.cilium/lb-ipam-ips: 10.229.30.184,fd96:619:6b75:130::5
spec:
  selector:
    app.kubernetes.io/name: plex
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  externalTrafficPolicy: Local
  ports:
  - port: 32400
    targetPort: plex
    name: plex
  - port: 8324
    targetPort: plex-roku
    name: plex-roku
  - port: 32469
    targetPort: plex-dlna
    name: plex-dlna
  - port: 1900
    targetPort: plex-upnp
    name: plex-upnp
    protocol: UDP
  - port: 32410
    targetPort: plex-gdm-1
    name: plex-gdm-1
    protocol: UDP
  - port: 32412
    targetPort: plex-gdm-2
    name: plex-gdm-2
    protocol: UDP
  - port: 32413
    targetPort: plex-gdm-3
    name: plex-gdm-3
    protocol: UDP
  - port: 32414
    targetPort: plex-gdm-4
    name: plex-gdm-4
    protocol: UDP
