deployments/pathweb/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  labels:
    external-dns: local-pdns
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: plex.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: plex-headless
            port:
              name: plex
  tls:
  - hosts:
    - plex.services.home.yrf.me
    secretName: services-wildcard-cert
