deployments/pathweb/plex/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex-network-policy
  namespace: media-services
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.229.2.0/24
        - ipBlock:
            cidr: fd96:619:2::/64
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: 32400
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: node-local-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
    - to:
        - ipBlock:
            cidr: ::/0
            except:
              - fc00::/7
